compiler/lume_parser/src/snapshots/lume_parser__parser__tests__call_snapshots@method_param_1.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = a.call(a);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Call(
                Call {
                    callee: Some(
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        8..9,
                                    ),
                                },
                            },
                        ),
                    ),
                    name: Path {
                        name: Identifier {
                            name: "call",
                            location: Location(
                                10..14,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            10..14,
                        ),
                    },
                    arguments: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        15..16,
                                    ),
                                },
                            },
                        ),
                    ],
                    type_arguments: [],
                    location: Location(
                        10..16,
                    ),
                },
            ),
            location: Location(
                0..18,
            ),
        },
    ),
]
