compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@builtin.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"class builtin Int32 {}\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Int32",
                    location: Location(
                        14..19,
                    ),
                },
                builtin: true,
                members: [],
                type_parameters: [],
                location: Location(
                    0..22,
                ),
                documentation: None,
            },
        ),
    ),
]
