compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"class Int32 {}\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Int32",
                    location: Location(
                        6..11,
                    ),
                },
                builtin: false,
                members: [],
                type_parameters: [],
                location: Location(
                    0..14,
                ),
            },
        ),
    ),
]
