compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@ext_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            class Foo {\n                fn external bar() -> Int32\n            }\"#)"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        19..22,
                    ),
                },
                builtin: false,
                members: [
                    MethodDefinition(
                        MethodDefinition {
                            visibility: Private(
                                Private {
                                    location: Location(
                                        41..43,
                                    ),
                                },
                            ),
                            external: true,
                            name: Identifier {
                                name: "bar",
                                location: Location(
                                    53..56,
                                ),
                            },
                            parameters: [],
                            type_parameters: [],
                            return_type: Some(
                                Scalar(
                                    ScalarType {
                                        name: "Int32",
                                        location: Location(
                                            62..67,
                                        ),
                                    },
                                ),
                            ),
                            block: Block {
                                statements: [],
                                location: Location(
                                    80..81,
                                ),
                            },
                            location: Location(
                                41..67,
                            ),
                        },
                    ),
                ],
                type_parameters: [],
                location: Location(
                    13..81,
                ),
            },
        ),
    ),
]
