compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@generic_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            class Foo {\n                fn bar<T>() -> Int32 { }\n            }\"#)"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        19..22,
                    ),
                },
                builtin: false,
                members: [
                    MethodDefinition(
                        MethodDefinition {
                            visibility: Private(
                                Private {
                                    location: Location(
                                        41..43,
                                    ),
                                },
                            ),
                            external: false,
                            name: Identifier {
                                name: "bar",
                                location: Location(
                                    44..47,
                                ),
                            },
                            parameters: [],
                            type_parameters: [
                                TypeParameter {
                                    name: Identifier {
                                        name: "T",
                                        location: Location(
                                            48..49,
                                        ),
                                    },
                                    constraints: [],
                                },
                            ],
                            return_type: Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        56..61,
                                    ),
                                },
                            ),
                            block: Block {
                                statements: [],
                                location: Location(
                                    62..65,
                                ),
                            },
                            location: Location(
                                41..65,
                            ),
                        },
                    ),
                ],
                type_parameters: [],
                location: Location(
                    13..79,
                ),
            },
        ),
    ),
]
