compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@invalid_name.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"class 1A {}\")"
---
ExpectedClassName {
    source: NamedSource {
        name: "<test>",
        content: "class 1A {}",
    },
    range: 6..7,
}
